--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,11 @@ dependencies:
   cached_network_image: 3.4.1
   cached_network_image_platform_interface: 4.1.1
   cached_network_image_web: 1.3.1
+  cloud_firestore: 5.4.4
+  cloud_firestore_platform_interface: 6.4.3
+  cloud_firestore_web: 4.3.2
   collection: 1.18.0
+  easy_debounce: 2.0.1
   firebase_core: 3.6.0
   firebase_core_platform_interface: 5.3.0
   firebase_core_web: 2.18.1
@@ -64,6 +68,7 @@ dependencies:
   shared_preferences_windows: 2.4.1
   sqflite: 2.3.3+1
   sqflite_common: 2.5.4+3
+  stream_transform: 2.1.0
   timeago: 3.6.1
   url_launcher: 6.3.0
   url_launcher_android: 6.3.10
